builder.js + css : fix separator for vmi + harmonize css

--- a/browser/css/aligner.less
+++ b/browser/css/aligner.less
@@ -323,3 +323,22 @@
   height: 5px;
   opacity : 1;
 }
+
+#aligner-open-button{
+  position: absolute;
+  width: 40px;
+  height: 12px;
+  background: white;
+  left: 50%;
+  right: auto;
+  border: solid;
+  border-width: 1px;
+  top: -7px;
+  text-align: center;
+  line-height: 0px;
+  display:none;
+}
+
+.aligner:hover #aligner-open-button{
+  display: block;
+}
