--- a/browser/css/svg.css
+++ b/browser/css/svg.css
@@ -74,6 +74,9 @@ ul {
   height: 32px;
   width: 100%;
   background: #ffffff;
+  border: solid;
+  border-width: 1px;
+  margin: 1px;
 }
 #top-container.alert {
   background: yellow;
@@ -139,8 +142,7 @@ ul {
   width: 100%;
   overflow: hidden;
   background: #ffffff;
-  margin: 6px 0px 0px 0px;
-  border-bottom-color: white;
+  margin: 3px 0px 0px 0px;
 }
 #right-container {
   display: flex;
@@ -309,18 +311,18 @@ line {
 }
 .graph_menu {
   position: absolute;
-  top: 0px;
-  right: 6px;
+  top: -1px;
+  right: -1px;
   min-width: 22px;
   min-height: 18px;
   text-align: center;
-  border-bottom: solid;
-  border-left: solid;
-  border-color: #333333;
+  border: solid;
   background: #ffffff;
   z-index: 1;
   overflow: auto;
   max-height: 100%;
+  border-width: 1px;
+  padding: 2px;
 }
 .graph_list {
   display: none;
@@ -433,12 +435,6 @@ line {
 .tagElem:hover,
 .data:hover {
   background: #333333;
-}
-#list,
-#data {
-  border-top: solid;
-  border-width: 6px;
-  border-color: #333333;
 }
 #list {
   flex: 1 1 auto;
@@ -933,6 +929,7 @@ span.logo {
   margin-top: calc(8px);
   z-index: 5;
   overflow: hidden;
+  border-width: 1px;
 }
 #bot-placeholder {
   flex: 0 0 155px;
@@ -953,10 +950,10 @@ span.logo {
   -moz-user-select: -moz-none;
   -ms-user-select: none;
   user-select: none;
-  border-bottom: solid;
+  border: solid;
   padding: 2px;
   width: 100%;
-  border-bottom-width: 2px;
+  border-width: 1px;
 }
 #filter_input {
   width: 200px;
@@ -998,9 +995,6 @@ span.logo {
   padding: 25px;
   color: grey;
 }
-.selector,
-#list_menu,
-#top-container,
 .list_clones,
 .bot-bar,
 #bot-container,
@@ -1086,8 +1080,8 @@ span.warningReads {
 }
 .sp_menu_anchor {
   position: relative;
-  top: 0px;
-  left: 0px;
+  top: -1px;
+  left: -1px;
 }
 .visu2_menu_anchor {
   position: absolute;
@@ -1238,8 +1232,14 @@ span.warningReads {
 }
 .visu-separator {
   position: relative;
-  height: 6px;
-  background: #333333;
+  border-bottom-style: solid;
+  border-width: 1px;
+  height: 8px;
+}
+.visu-separator:hover {
+  border-width: 4px;
+  height: 5px;
+  cursor: grab;
 }
 #bot-separator {
   background: #333333;
@@ -1249,21 +1249,26 @@ span.warningReads {
   position: relative;
   top: -6px;
 }
-#vertical-separator,
-#vertical-separator-right {
+#vertical-separator {
   position: relative;
   float: left;
-  width: 6px;
-  background: #333333;
   cursor: pointer;
+  border-right-style: solid;
+  border-width: 1px;
+  min-width: 8px;
+}
+#vertical-separator:hover {
+  cursor: pointer;
+  border-width: 4px;
+  min-width: 5px;
 }
 #vertical-separator-right {
+  position: relative;
   float: right;
-}
-#visu-separator:hover,
-#vertical-separator:hover,
-#bot-separator:hover {
-  background: #777777;
+  cursor: pointer;
+  border-left-style: solid;
+  border-width: 1px;
+  width: 0px;
 }
 #norm_button {
   width: 7ex;
@@ -1410,6 +1415,9 @@ h3 .uid {
 #db_fixed_header {
   position: absolute;
   top: 0px;
+  background: #777777;
+}
+.db_fixed_footer {
   background: #777777;
 }
 .db_help_desc {
@@ -2519,6 +2527,23 @@ span .end-codon {
 .seq_layer_underline:hover {
   height: 5px;
   opacity: 1;
+}
+#aligner-open-button {
+  position: absolute;
+  width: 40px;
+  height: 12px;
+  background: white;
+  left: 50%;
+  right: auto;
+  border: solid;
+  border-width: 1px;
+  top: -7px;
+  text-align: center;
+  line-height: 0px;
+  display: none;
+}
+.aligner:hover #aligner-open-button {
+  display: block;
 }
 #resolution5 {
   opacity: 0;
