--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -105,6 +105,9 @@ ul{
   height: @top_container_height;
   width: 100%;
   background: @background;
+  border: solid;
+  border-width: 1px;
+  margin: 1px;
 }
 
 #top-container.alert
@@ -183,8 +186,7 @@ position : fixed;
   width: 100%;
   overflow: hidden;
   background: @background;
-  margin: @margin 0px 0px 0px;
-  border-bottom-color: white;
+  margin: 3px 0px 0px 0px;
 }
 
 #right-container{
@@ -388,18 +390,18 @@ line {
 
 .graph_menu{
   position: absolute;
-  top: 0px;
-  right: 6px;
+  top: -1px;
+  right: -1px;
   min-width: 22px;
   min-height: 18px;
   text-align: center;
-  border-bottom: solid;
-  border-left: solid;
-  border-color: @border;
-  background : @background;
+  border: solid;
+  background: #ffffff;
   z-index: 1;
   overflow: auto;
   max-height: 100%;
+  border-width: 1px;
+  padding: 2px;
 }
 
 .graph_list{
@@ -550,12 +552,6 @@ line {
 
 .list:hover, .tagElem:hover, .data:hover{
   background :@border;
-}
-
-#list, #data{
-    border-top: solid;
-    border-width: @margin;
-    border-color : @border;
 }
 
 #list{
@@ -1117,6 +1113,7 @@ span.logo
   margin-top: calc(@top_container_height - 24px);
   z-index:5;
   overflow: hidden;
+  border-width: 1px;
 }
 
 #bot-placeholder {
@@ -1141,10 +1138,10 @@ span.logo
   -moz-user-select: -moz-none;
   -ms-user-select: none;
   user-select: none;
-  border-bottom:solid;
+  border:solid;
   padding:2px;
   width: 100%;
-  border-bottom-width: 2px;
+  border-width: 1px;
 }
 
 #filter_input
@@ -1193,7 +1190,7 @@ span.logo
   color: grey;
 }
 
-.selector, #list_menu, #top-container, .list_clones, .bot-bar, #bot-container, .tagSelector
+.list_clones, .bot-bar, #bot-container, .tagSelector
 {
   border-color: @border; 
 }
@@ -1255,8 +1252,8 @@ span.warningReads {
 
 .sp_menu_anchor{
     position: relative;
-    top: 0px;
-    left: 0px;
+    top: -1px;
+    left: -1px;
 }
 
 .visu2_menu_anchor {
@@ -1429,35 +1426,51 @@ span.warningReads {
 }
 
 .visu-separator {
-    position: relative;
-    height: @margin;
-    background: @border;
+  position: relative;
+  border-bottom-style: solid;
+  border-width: 1px;
+  height: 8px;
+}
+
+.visu-separator:hover {
+  border-width: 4px;
+  height: 5px;
+  cursor: grab;
 }
 
 #bot-separator {
-    background: @border;
-    width: 100%;
-    height: @margin;
-    cursor: pointer;
-    position: relative;
-    top: -@margin;
+  background: @border;
+  width: 100%;
+  height: @margin;
+  cursor: pointer;
+  position: relative;
+  top: -@margin;
 }
 
-#vertical-separator, #vertical-separator-right {
-    position: relative;
-    float: left;
-    width: @margin;
-    background : @border;
-    cursor: pointer;
+#vertical-separator {
+  position: relative;
+  float: left;
+  cursor: pointer;
+  border-right-style: solid;
+  border-width: 1px;
+  min-width: 8px;
+}
+
+#vertical-separator:hover {
+  cursor: pointer;
+  border-width: 4px;
+  min-width: 5px;
 }
 
 #vertical-separator-right {
-    float: right;
+position: relative;
+float: right;
+cursor: pointer;
+border-left-style: solid;
+border-width: 1px;
+width: 0px;
 }
 
-#visu-separator:hover , #vertical-separator:hover, #bot-separator:hover {
-    background: @highlight;
-}
 
 #norm_button {
   width: 7ex;
