html : update templates

--- a/browser/template/aligner.html
+++ b/browser/template/aligner.html
@@ -76,9 +76,7 @@
                                 <span class="button" id="reset_focus"       title="Reset Focus/Hide filters (z)">
                                     <i  class="icon-cancel-circled-outline"></i></span>
                                 <span class="button" id="star_selected"     title="Tag selected clones">
-                                    <i id="tag_icon__multiple" class="icon-star-2"></i></span>
-                                <span id="fixsegmenter" class="button"      title="fix the segmenter in his position">
-                                    <i  class="icon-pin-outline"></i></span>
+                                    <i id="tag_icon__multiple" class="icon-star-2"></i></span>>
                         </div>
                 </div>
     
