--- a/browser/css/segmenter_page.css
+++ b/browser/css/segmenter_page.css
@@ -1245,10 +1245,10 @@ span.warningReads {
   border-top-style: solid;
   border-width: 1px;
   height: 6px;
+  cursor: row-resize;
 }
 .visu-separator:hover {
   background-color: #fdf6e3;
-  cursor: grab;
 }
 .visu-separator-icon {
   position: relative;
@@ -1898,6 +1898,9 @@ label.highlight_label {
 }
 i[class*="icon-"] {
   cursor: pointer;
+}
+.visu-separator i {
+  cursor: row-resize;
 }
 .disabledClass {
   pointer-events: none;
