Server view; add some ids on DOM element to use cypress calling

--- a/server/web2py/applications/vidjil/views/admin/index.html
+++ b/server/web2py/applications/vidjil/views/admin/index.html
@@ -1,7 +1,7 @@
 {{extend 'db_layout.html'}}
 
 
-<h3>Admin</h3>
+<h3 id="page_admin">Admin</h3>
 
 <a class="button" onclick="db.call('results_file/index');">.vidjil file list</a>
 
