--- a/server/web2py/applications/vidjil/views/my_account/jobs.html
+++ b/server/web2py/applications/vidjil/views/my_account/jobs.html
@@ -1,6 +1,6 @@
 {{extend 'db_layout.html'}}
 
-<div>
+<div id="page_jobs">
     <div class="db_block">
         <div class="db_block_left">
             search
