--- a/server/web2py/applications/vidjil/views/pre_process/index.html
+++ b/server/web2py/applications/vidjil/views/pre_process/index.html
@@ -3,7 +3,7 @@
 {{('message' in globals())}}
 {{if 'message' in globals():}}
 
-<h3>{{=message}}</h3>
+<h3 id="page_preprocess">{{=message}}</h3>
 
 <div id="db_table_container">
     <table class="db_table" id="table">
