--- a/server/web2py/applications/vidjil/views/user/info.html
+++ b/server/web2py/applications/vidjil/views/user/info.html
@@ -15,7 +15,7 @@ query = db(
 <div>
 
     <div>
-        <h3>{{=message}} {{=db.auth_user[id].first_name}} {{=db.auth_user[id].last_name}} </h3>
+        <h3 id="user_info">{{=message}} {{=db.auth_user[id].first_name}} {{=db.auth_user[id].last_name}} </h3>
     </div>
     
     
