--- a/server/web2py/applications/vidjil/views/config/index.html
+++ b/server/web2py/applications/vidjil/views/config/index.html
@@ -5,7 +5,7 @@
 
 
 
-<h3>{{=message}}</h3>
+<h3 id="page_process">{{=message}}</h3>
 
 <div id="db_table_container">
     <table class="db_table" id="table">
