--- a/server/web2py/applications/vidjil/views/db_layout.html
+++ b/server/web2py/applications/vidjil/views/db_layout.html
@@ -1,20 +1,20 @@
 <div id="db_header">
     
     <div id="db_menu">
-	<a class="button button_token patient_token" onclick="db.call('sample_set/all', {'type': 'patient', 'page': 0});">patients</a>
-	<a class="button button_token run_token" onclick="db.call('sample_set/all', {'type': 'run', 'page': 0});">runs</a>
-	<a class="button button_token generic_token" onclick="db.call('sample_set/all', {'type': 'generic', 'page': 0} );">sets</a>
-        <a class="button" onclick="db.call('my_account/index');">usage</a>
-        <a class="button" onclick="db.call('my_account/jobs');">processes</a>
-        <a class="button" onclick="db.call('notification/index');">news</a>
+	<a id="db_page_patient" class="button button_token patient_token" onclick="db.call('sample_set/all', {'type': 'patient', 'page': 0});">patients</a>
+	<a id="db_page_run" class="button button_token run_token" onclick="db.call('sample_set/all', {'type': 'run', 'page': 0});">runs</a>
+	<a id="db_page_set" class="button button_token generic_token" onclick="db.call('sample_set/all', {'type': 'generic', 'page': 0} );">sets</a>
+        <a id="db_page_usage" class="button" onclick="db.call('my_account/index');">usage</a>
+        <a id="db_page_processes" class="button" onclick="db.call('my_account/jobs');">processes</a>
+        <a id="db_page_news" class="button" onclick="db.call('notification/index');">news</a>
         <!-- <a class="button" onclick="db.call('log/index');">log</a> -->
         {{if auth.is_admin():}}
         - - -
-        <a class="button" onclick="db.call('pre_process/index');">pre-process configs</a>
-        <a class="button" onclick="db.call('config/index');">process configs</a>
-        <a class="button" onclick="db.call('group/index');">groups</a>
-        <a class="button" onclick="db.call('user/index');">users</a>
-        <a class="button" onclick="db.call('admin/index');">admin</a>
+        <a id="db_page_preprocess" class="button" onclick="db.call('pre_process/index');">pre-process configs</a>
+        <a id="db_page_configs" class="button" onclick="db.call('config/index');">process configs</a>
+        <a id="db_page_groups"  class="button" onclick="db.call('group/index');">groups</a>
+        <a id="db_page_users"   class="button" onclick="db.call('user/index');">users</a>
+        <a id="db_page_admin"   class="button" onclick="db.call('admin/index');">admin</a>
         - - -
         {{pass}}
     </div>
@@ -60,7 +60,7 @@
         
         
         
-                <a class="button" onclick="db.logout();">(logout)</a>
+                <a id="logout_button" class="button" onclick="db.logout();">(logout)</a>
             {{pass}}
     </div>
     
