--- a/server/web2py/applications/vidjil/views/my_account/index.html
+++ b/server/web2py/applications/vidjil/views/my_account/index.html
@@ -1,7 +1,7 @@
 {{extend 'db_layout.html'}}
 
 <div>
-    <h3>Usage &ndash;
+    <h3 id="page_usage">Usage &ndash;
       {{ if request.vars["filter"]: }}
         {{=request.vars["filter"]}}
       {{ else: }}
