--- a/server/web2py/applications/vidjil/views/results_file/confirm.html
+++ b/server/web2py/applications/vidjil/views/results_file/confirm.html
@@ -9,8 +9,8 @@
     Are you sure you want to delete the results of this processing?</br>
 
     <div class="center"> 
-        <button onclick="db.call('results_file/delete', {'results_file_id' :'{{=request.vars["results_file_id"]}}', 'sample_set_id': '{{=request.vars["sample_set_id"]}}'} )">delete</button>
-        <button onclick="db.back();">cancel</button>
+        <button id="delete_button" onclick="db.call('results_file/delete', {'results_file_id' :'{{=request.vars["results_file_id"]}}', 'sample_set_id': '{{=request.vars["sample_set_id"]}}'} )">delete</button>
+        <button id="cancel_button" onclick="db.back();">cancel</button>
     </div>
 </div>
     
