--- a/server/web2py/applications/vidjil/views/user/index.html
+++ b/server/web2py/applications/vidjil/views/user/index.html
@@ -1,10 +1,10 @@
 {{extend 'db_layout.html'}}
 {{import vidjil_utils}}
 
-    <h3>Users</h3>
+    <h3 id="page_user">Users</h3>
     
     <div id="db_table_container">
-        <table class="db_table" id="table">
+        <table class="db_table" id="table_users">
             <thead>
                 <tr><td class="column_50" onclick="db.call('user/index', {'sort' :'id'})">id</td>
                     <td class="column_200"> name</td>
@@ -42,5 +42,5 @@
         <table class="db_table" id="db_fixed_header"></table>
     </div>
 
-<span class="button2" onclick="db.call('default/user/register');">+ new user</span>
+<span id="create_user_button" class="button2" onclick="db.call('default/user/register');">+ new user</span>
 
