Revert "log.py: Temporarily hide logs"
This reverts commit 3028dbca3ed00e9bbe3ad108560fa40b1e2373c6.

--- a/server/web2py/applications/vidjil/views/db_layout.html
+++ b/server/web2py/applications/vidjil/views/db_layout.html
@@ -7,7 +7,7 @@
         <a class="button" onclick="db.call('my_account/index');">usage</a>
         <a class="button" onclick="db.call('my_account/jobs');">processes</a>
         <a class="button" onclick="db.call('notification/index');">news</a>
-        <!-- <a class="button" onclick="db.call('log/index');">log</a> -->
+        <a class="button" onclick="db.call('log/index');">log</a>
         {{if auth.is_admin():}}
         - - -
         <a class="button" onclick="db.call('pre_process/index');">pre-process configs</a>
