server views; add some ids for cypress pipeline

--- a/server/web2py/applications/vidjil/views/config/add.html
+++ b/server/web2py/applications/vidjil/views/config/add.html
@@ -47,7 +47,7 @@
             </tr>
             <tr>
                 <td> </td>
-                <td ><input type="submit" value="add config" class="btn"> </td>
+                <td ><input id="add_config_submit" type="submit" value="add config" class="btn"> </td>
                 <td> </td>
             </tr>
         </tbody>
