--- a/server/web2py/applications/vidjil/views/group/index.html
+++ b/server/web2py/applications/vidjil/views/group/index.html
@@ -25,18 +25,18 @@
             </thead>
            {{for row in query :}}
                <tr id="row_group_{{=row.id}}" onclick="db.call('group/info', {'id' :'{{=row.id}}'} )">
-                   <td>
+                   <td id="col_grpSelect_{{=row.id}}">
                        <input type="checkbox" name="group_ids[]" value="{{=row.id}}"
                          onclick="db.stopGroupPropagate(event)" />
                    </td>
-                    <td id="col_role"> {{=row.role}} </td>
-                    <td id="col_count"> {{=row.count}}  </td>
-                    <td id="col_access"> {{=row.access}} // {{=row.description }} </td>
-                    <td id="col_parent"> {{=row.parents}} </td>
-                    <td id="col_stats" onclick="db.call('my_account', {'group_ids' :'{{=row.id}}'} )" > <i class="icon-chart-pie" title="view group statistics"></i> </td>
-                    <td id="col_permission" onclick="db.call('group/permission', {'id' :'{{=row.id}}'} )" > <i class="icon-key" title="set permissions"></i> </td>
-                    <td id="col_edit" onclick="db.call('group/edit', {'id' :'{{=row.id}}'} )" > <i class="icon-pencil-2" title="edit group"></i> </td>
-                    <td id="col_delete" onclick="db.call('group/confirm', {'id' :'{{=row.id}}'} )" > <i class="icon-erase" title="delete group"></i> </td>
+                    <td id="col_role_{{=row.id}}"> {{=row.role}} </td>
+                    <td id="col_count_{{=row.id}}"> {{=row.count}}  </td>
+                    <td id="col_access_{{=row.id}}"> {{=row.access}} // {{=row.description }} </td>
+                    <td id="col_parent_{{=row.id}}"> {{=row.parents}} </td>
+                    <td id="col_stats_{{=row.id}}" onclick="db.call('my_account', {'group_ids' :'{{=row.id}}'} )" > <i class="icon-chart-pie" title="view group statistics"></i> </td>
+                    <td id="col_permission_{{=row.id}}" onclick="db.call('group/permission', {'id' :'{{=row.id}}'} )" > <i class="icon-key" title="set permissions"></i> </td>
+                    <td id="col_edit_{{=row.id}}" onclick="db.call('group/edit', {'id' :'{{=row.id}}'} )" > <i class="icon-pencil-2" title="edit group"></i> </td>
+                    <td id="col_delete_{{=row.id}}" onclick="db.call('group/confirm', {'id' :'{{=row.id}}'} )" > <i class="icon-erase" title="delete group"></i> </td>
                 </tr>
            {{pass}}
         </table>
