jstree, add a search option

--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -2188,10 +2188,13 @@ i[class*="icon-"] {
 }
 
 .jstree {
-    height: 90%;
+    height: 88%;
     width: 100%;
     overflow-y: auto;
     overflow-x: auto;
+}
+#jstree {
+    height: auto;
 }
 
 .jstree_button {
@@ -2203,6 +2206,15 @@ i[class*="icon-"] {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+#jstree_search_form {
+  margin-top: -15px;
+}
+
+#jstree_search_input {
+  width:80%;
+}
+
 
 .threeDigits {
   min-width: 21px;
