--- a/server/web2py/applications/vidjil/views/file/form.html
+++ b/server/web2py/applications/vidjil/views/file/form.html
@@ -113,6 +113,10 @@
         onclick="db.close_jstree()">
         <i class="icon-cancel"></i>
     </span>
+    <form id="jstree_search_form">
+      <input class="form-control jstree_search" type="search" id="jstree_search_input" placeholder="Search (only for opened folder)" />
+      <button type="submit">Search</button>
+    </form>
     <input type="hidden" id="file_filename" />
     <span>file:</span>
     <span id="file_indicator"></span>
