--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -1422,9 +1422,14 @@ span.warningReads {
 }
 
 .axis_select {
-    display: flex;
+    vertical-align: bottom;
+    display: inline;
     overflow: hidden;
     white-space: nowrap;
+}
+
+.axis_select_icon {
+    display: flex;
 }
 
 .axis_select select {
