--- a/server/web2py/applications/vidjil/views/user/index.html
+++ b/server/web2py/applications/vidjil/views/user/index.html
@@ -19,6 +19,7 @@
                     <td class="column_100" onclick="db.call('user/index', {'sort' :'files'
                   {{if not reverse and request.vars["sort"]=="files" :}} , 'reverse' : true {{pass}} })">files uploaded </td>
                     <td class="column_20"> </td>
+                    <td class="column_20"> </td>
                 </tr>
             </thead>
             
@@ -34,6 +35,7 @@
                     <td> {{=row.created}}  </td>
                     <td> {{=row.files}} ({{=vidjil_utils.format_size(row.size)}}) </td>
                     <td onclick="db.call('user/edit', {'id' :'{{=row.id}}'} )" > <i class="icon-pencil-2" title="edit user information"></i> </td>
+                    <td onclick="db.call('default/impersonate', {'id' : {{=row.id}}, 'next': '{{=request.url}}'})" id="impersonate_btn_{{=row.id}}"> <i class="icon-user" title="impersonate user {{=row.id}} ({{=row.first_name}} {{=row.last_name}})"></i> </td>
                 </tr>
            {{pass}}
         
