--- a/browser/css/light.css
+++ b/browser/css/light.css
@@ -561,7 +561,7 @@ line {
   text-align: center;
   border-radius: 3px;
   border-width: 1px;
-  margin: 2px 4px 4px 2px;
+  margin: 2px 2px 2px 2px;
   color: #fff;
   color: rgba(255, 255, 255, 0.7);
   font-size: 70%;
@@ -1932,7 +1932,7 @@ i[class*="icon-"] {
   margin-top: -15px;
 }
 #jstree_search_input {
-  width: 350px;
+  width: 80%;
 }
 .threeDigits {
   min-width: 21px;
@@ -2313,8 +2313,7 @@ div.tooltip {
   user-select: none;
   cursor: pointer;
   padding: 1px 1px 0px 1px;
-  margin: 1px;
-  width: 60px;
+  width: 65px;
 }
 .rs-selected {
   opacity: 1;
@@ -2574,7 +2573,7 @@ span .end-codon {
 .seq_layer_highlight {
   border-left: solid black 1px;
   border-right: solid black 1px;
-  opacity: 0.2;
+  opacity: 0.15;
   height: 15px;
   top: 5px;
   margin-left: -2px;
