--- a/browser/css/segmenter_page.css
+++ b/browser/css/segmenter_page.css
@@ -561,7 +561,7 @@ line {
   text-align: center;
   border-radius: 3px;
   border-width: 1px;
-  margin: 2px 4px 4px 2px;
+  margin: 2px 2px 2px 2px;
   color: #fff;
   color: rgba(255, 255, 255, 0.7);
   font-size: 70%;
@@ -1912,10 +1912,13 @@ i[class*="icon-"] {
   white-space: pre-line;
 }
 .jstree {
-  height: 90%;
+  height: 88%;
   width: 100%;
   overflow-y: auto;
   overflow-x: auto;
+}
+#jstree {
+  height: auto;
 }
 .jstree_button {
   float: right;
@@ -1924,6 +1927,12 @@ i[class*="icon-"] {
   max-width: 200px;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+#jstree_search_form {
+  margin-top: -15px;
+}
+#jstree_search_input {
+  width: 80%;
 }
 .threeDigits {
   min-width: 21px;
@@ -2304,8 +2313,7 @@ div.tooltip {
   user-select: none;
   cursor: pointer;
   padding: 1px 1px 0px 1px;
-  margin: 1px;
-  width: 60px;
+  width: 65px;
 }
 .rs-selected {
   opacity: 1;
@@ -2565,7 +2573,7 @@ span .end-codon {
 .seq_layer_highlight {
   border-left: solid black 1px;
   border-right: solid black 1px;
-  opacity: 0.1;
+  opacity: 0.15;
   height: 15px;
   top: 5px;
   margin-left: -2px;
