--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -933,7 +933,7 @@ line {
 
 .popup_container{
   z-index:20;
-  min-width:500px;
+  min-width:300px;
   max-width:80%;
   font-size: 13px; 
   padding: 20px;
@@ -950,6 +950,17 @@ line {
   border-width:1px;
   border-color: @default;
   box-shadow: 2px 2px 5px @default;
+}
+
+.popup_input{
+  text-align:center; 
+  margin: 10px;
+}
+
+.popup_button{
+  display: flex; 
+  justify-content: space-around;
+
 }
 
 /* Main style for <a> Used in particular in .popup_container, on login screen, in news, in links to results (for patient list and patient info)  */
@@ -1003,6 +1014,7 @@ span.sample-tag, a.tag-link {
   overflow-x: auto;
   height : 100%;
   width : 100%;
+  margin-bottom: 10px;
 }
 
 #file_menu, #menu, #list_clones, #tagSelector, #display-menu, #bot-container{
