--- a/server/web2py/applications/vidjil/views/pre_process/confirm.html
+++ b/server/web2py/applications/vidjil/views/pre_process/confirm.html
@@ -6,9 +6,11 @@
 <div>
     <h3>{{=message}}</h3>
     
-    Are you sure you want to delete this pre_process</br>
-.</br>
+    Are you sure you want to delete this pre_process: <strong id="preprocess_name">{{=query[0]["name"]}}</strong> ({{=request.vars["id"]}}).
+    </br></br>
 
+    <b>Info:</b> {{=query[0]["info"]}}</br>
+    <b>Command:</b> {{=query[0]["command"]}}</br>
     <div class="center"> 
         <button id='delete_preprocess_confirm_btn' onclick="db.call('pre_process/delete', {'id' :'{{=request.vars["id"]}}'} )">continue</button>
     </div>
