preprocess views; add ids for cypress testing

--- a/server/web2py/applications/vidjil/views/pre_process/add.html
+++ b/server/web2py/applications/vidjil/views/pre_process/add.html
@@ -28,7 +28,7 @@
             </tr>
             <tr>
                 <td> </td>
-                <td ><input type="submit" value="add pre-process" class="btn"> </td>
+                <td ><input id="add_preprocess_submit" type="submit" value="add pre-process" class="btn"> </td>
                 <td> </td>
             </tr>
         </tbody>
