--- a/server/web2py/applications/vidjil/views/pre_process/index.html
+++ b/server/web2py/applications/vidjil/views/pre_process/index.html
@@ -19,22 +19,22 @@
             </tr>
         </thead>
        {{ for row in query :}}
-            <tr>
-                <td> {{=row.id }} </td>
-                <td> {{=row.name }} </td>
-                <td> {{=row.command }} </td>
-                <td> {{=row.info }} </td>
+            <tr  id="preprocess_line_{{=row.id }}" >
+                <td id="preprocess_id_{{=row.id }}"   > {{=row.id }} </td>
+                <td id="preprocess_name_{{=row.id }}" > {{=row.name }} </td>
+                <td id="preprocess_command_{{=row.id }}" > {{=row.command }} </td>
+                <td id="preprocess_info_{{=row.id }}" > {{=row.info }} </td>
 
-{{if isAdmin:}} <td onclick="db.call('pre_process/permission', {'id' :'{{=row.id}}'} )" > <i class="icon-key" title="set permissions"></i> </td> {{else:}} <td></td> {{pass}}
-                <td onclick="db.call('pre_process/edit', {'id' :'{{=row.id}}'} )" > <i class="icon-pencil-2" title="edit pre-process"></i> </td>
-                <td onclick="db.call('pre_process/confirm', {'id' :'{{=row.id}}'} )" > <i class="icon-erase" title="delete pre-process"></i> </td>
+{{if isAdmin:}} <td id="preprocess_permission_{{=row.id}}" onclick="db.call('pre_process/permission', {'id' :'{{=row.id}}'} )" > <i class="icon-key" title="set permissions"></i> </td> {{else:}} <td></td> {{pass}}
+                <td id="preprocess_edit_{{=row.id}}" onclick="db.call('pre_process/edit', {'id' :'{{=row.id}}'} )" > <i class="icon-pencil-2" title="edit pre-process"></i> </td>
+                <td id="preprocess_delete_{{=row.id}}" onclick="db.call('pre_process/confirm', {'id' :'{{=row.id}}'} )" > <i class="icon-erase" title="delete pre-process"></i> </td>
             </tr>
         {{pass}}
     </table>
     <table class="db_table" id="db_fixed_header"></table>
 </div>
 
-<span class="button2" onclick="db.call('pre_process/add')"> + new pre-process </span>
+<span id="new_preprocess_btn" class="button2" onclick="db.call('pre_process/add')"> + new pre-process </span>
 
 
 {{elif 'content' in globals():}}
