less : add css for inline button in aligner sequences

--- a/browser/css/aligner.less
+++ b/browser/css/aligner.less
@@ -353,3 +353,12 @@
   position: relative;
   width: 420px;
 }
+
+.aligner-inline-button{
+  padding: 0px 5px;
+}
+
+.aligner-inline-button:hover{
+  cursor: pointer;
+  background-color: #ddd
+}
