--- a/browser/css/svg.css
+++ b/browser/css/svg.css
@@ -2539,6 +2539,9 @@ span .end-codon {
 .aligner-menu:hover .menu-content {
   display: block;
 }
+.aligner-checkbox-label {
+  display: block;
+}
 .menu-content {
   display: none;
   position: absolute;
@@ -2556,7 +2559,6 @@ span .end-codon {
 .menu-content label {
   padding: 8px 12px;
   text-decoration: none;
-  display: block;
   cursor: pointer;
 }
 .menu-content a:hover {
@@ -2672,6 +2674,13 @@ span .end-codon {
 #aligner-left {
   position: relative;
   width: 420px;
+}
+.aligner-inline-button {
+  padding: 0px 5px;
+}
+.aligner-inline-button:hover {
+  cursor: pointer;
+  background-color: #dddddd;
 }
 #resolution5 {
   opacity: 0;
