--- a/browser/css/segmenter_page.css
+++ b/browser/css/segmenter_page.css
@@ -1,4 +1,334 @@
 /* default color solarizeL */
+.segmenter .axisBox > span {
+  margin: 0 3px;
+  background: #ffffff;
+}
+.bot-bar {
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: -moz-none;
+  -ms-user-select: none;
+  user-select: none;
+  border-color: #cccccc;
+  border: solid;
+  border-width: 1px;
+}
+.stats {
+  position: absolute;
+  text-align: right;
+  float: right;
+  max-width: 347px;
+  padding: 2px 0px;
+  overflow: hidden;
+  height: 16px;
+  right: 0px;
+  top: 1px;
+}
+.list_select {
+  display: block;
+  border: solid;
+  border-width: 2px;
+  padding: 0px;
+  border-color: #002b36;
+}
+.list_focus {
+  background: #cccccc !important;
+}
+.sequence-line {
+  white-space: nowrap;
+  height: 30px;
+}
+/*
+  .sequence-line:hover { 
+      font-weight: bold;
+  }
+  */
+.seq-fixed {
+  position: relative;
+  display: flex;
+  width: 445px;
+  height: 30px;
+  margin: -2px;
+  padding: 5px;
+  left: 0px;
+  cursor: pointer;
+  z-index: 5;
+}
+.seq-mobil {
+  font-family: monospace;
+  top: 0px;
+  left: 455px;
+  position: absolute;
+  font-size: 1em;
+  display: inline-block;
+  height: 30px;
+}
+.seq-marge {
+  word-spacing: normal;
+}
+.V {
+  color: #000;
+  background-color: #efe;
+}
+.D {
+  color: #000;
+  background-color: #fee;
+}
+.J {
+  color: #000;
+  background-color: #ffffe2;
+}
+.N,
+.N + .J,
+.N + .D {
+  box-shadow: -1px 0 0 #657b83;
+}
+.highlight_border,
+.highlight_seq {
+  display: inline-flex;
+  height: 1em;
+  position: relative;
+}
+.highlight_border {
+  border-bottom: solid;
+  margin: -1px;
+  border-width: 4px;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: -moz-none;
+  -ms-user-select: none;
+  user-select: none;
+  pointer-events: none;
+  opacity: 0.3;
+  bottom: 1px;
+}
+.highlight_seq {
+  top: .9em;
+  padding-bottom: 1px;
+  opacity: 0.6;
+  font-size: 70%;
+  letter-spacing: .428em;
+  /* (1-.7) / .7 */
+  left: .214em;
+}
+.highlight {
+  display: inline-block;
+  width: 0px;
+  word-spacing: normal;
+}
+span .substitution,
+span .indel,
+span .insertion,
+span .deletion {
+  font-weight: bold;
+  color: #800;
+}
+span .substitution {
+  border-bottom: 1px solid #800;
+}
+span .silent {
+  border-bottom: 3px double #008;
+  color: #008;
+}
+span .end-codon {
+  box-shadow: 1px 0 0 #657b83;
+}
+.seq-fixed {
+  background: #ffffff;
+}
+.menu-segmenter {
+  position: relative;
+  float: left;
+  width: 475px 200;
+}
+#toIMGTSeg {
+  width: 12px;
+  display: inline-block;
+  text-align: center;
+}
+.menu-highlight {
+  position: relative;
+  float: left;
+  width: eval(300px);
+}
+.segmenter {
+  overflow-x: scroll !important;
+  overflow-y: auto;
+  min-height: 130px;
+  margin-top: 1px;
+  max-height: 500px;
+}
+#segmenter {
+  display: flex;
+  flex-flow: column;
+}
+#highlightCheckboxes {
+  height: 100%;
+  float: left;
+}
+.seq-fixed {
+  bottom: 1px;
+}
+.aligner-menu {
+  display: inline-block;
+  padding: 2px 10px;
+}
+.aligner-menu:hover {
+  cursor: pointer;
+  background-color: #dddddd;
+}
+.aligner-button {
+  cursor: pointer;
+  font-size: 13px;
+  min-width: 16px;
+  color: #657b83;
+}
+.aligner-menu:hover .menu-content {
+  display: block;
+}
+.aligner-checkbox-label {
+  display: block;
+}
+.menu-content {
+  display: none;
+  position: absolute;
+  bottom: 20px;
+  background-color: white;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  margin-left: -10px;
+}
+.menu-content a {
+  padding: 8px 12px;
+  text-decoration: none;
+  display: block;
+}
+.menu-content label {
+  padding: 8px 12px;
+  text-decoration: none;
+  cursor: pointer;
+}
+.menu-content a:hover {
+  background-color: #dddddd;
+}
+.menu-content label:hover {
+  background-color: #dddddd;
+}
+.seq_layer {
+  position: absolute;
+  top: 0px;
+}
+.seq_layer_text {
+  position: absolute;
+  top: 5px;
+  z-index: 3;
+}
+.seq_layer_text2 {
+  position: absolute;
+  top: 20px;
+  -webkit-transform: scale(1, 0.5);
+  /* Safari and Chrome */
+  -moz-transform: scale(1, 0.5);
+  /* Firefox */
+  -ms-transform: scale(1, 0.5);
+  /* IE 9 */
+  -o-transform: scale(1, 0.5);
+  /* Opera */
+  transform: scale(1, 0.5);
+  /* W3C */
+}
+.seq_layer_highlight {
+  border-left: solid black 1px;
+  border-right: solid black 1px;
+  opacity: 0.15;
+  height: 15px;
+  top: 5px;
+  margin-left: -2px;
+  padding-right: 4px;
+}
+.seq_layer_bracket {
+  height: 2px;
+  top: 21px;
+  border: solid;
+  border-top: none;
+  border-width: 2px;
+  margin: -2px;
+  opacity: 0.6;
+  z-index: 1;
+  margin-left: -3px;
+  padding-right: 2px;
+}
+.seq_layer_bracket_top {
+  height: 2px;
+  top: 4px;
+  border: solid;
+  border-bottom: none;
+  border-width: 2px;
+  margin: -2px;
+  opacity: 0.6;
+  z-index: 1;
+  margin-left: -3px;
+  padding-right: 2px;
+}
+.seq_layer_underline {
+  border-left: solid black 1px;
+  border-right: solid black 1px;
+  height: 3px;
+  top: 18px;
+  opacity: 0.3;
+  z-index: 2;
+  margin-left: -2px;
+  padding-right: 4px;
+}
+.seq_layer_quality {
+  height: 5px;
+  top: 24px;
+  z-index: 2;
+}
+.seq_quality_block {
+  opacity: 1;
+  height: 5px;
+  float: left;
+}
+.seq_quality_block:hover {
+  opacity: 0.5;
+}
+.seq_layer_bracket:hover,
+.seq_layer_bracket_top:hover {
+  border-width: 4px;
+  opacity: 1;
+}
+.seq_layer_underline:hover {
+  height: 5px;
+  opacity: 1;
+}
+#aligner-open-button {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 12px;
+  background: white;
+  right: auto;
+  text-align: center;
+  line-height: 0px;
+  height: 16px;
+  padding-top: 4px;
+  padding-left: 100px;
+}
+#aligner-open-button:hover {
+  background: #fdf6e3;
+}
+#aligner-left {
+  position: relative;
+  width: 420px;
+}
+.aligner-inline-button {
+  padding: 0px 5px;
+}
+.aligner-inline-button:hover {
+  cursor: pointer;
+  background-color: #dddddd;
+}
 /* base Vidjil style */
 /* @default, @background, @highlight, @select, @secondary and @border have to be defined */
 /* default tag color */
@@ -2352,327 +2682,6 @@ div.tooltip {
 }
 .rs-selected:hover {
   background: lightgray;
-}
-.segmenter .axisBox > span {
-  margin: 0 3px;
-  background: #ffffff;
-}
-.bot-bar {
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: -moz-none;
-  -ms-user-select: none;
-  user-select: none;
-  border-color: #dddddd;
-  border: solid;
-  border-width: 1px;
-}
-.stats {
-  position: absolute;
-  text-align: right;
-  float: right;
-  max-width: 347px;
-  padding: 2px 0px;
-  overflow: hidden;
-  height: 16px;
-  right: 0px;
-  top: 1px;
-}
-.list_select {
-  display: block;
-  border: solid;
-  border-width: 2px;
-  padding: 0px;
-  border-color: #002b36;
-}
-.list_focus {
-  background: #dddddd !important;
-}
-.sequence-line {
-  white-space: nowrap;
-  height: 30px;
-}
-/*
-  .sequence-line:hover { 
-      font-weight: bold;
-  }
-  */
-.seq-fixed {
-  position: relative;
-  display: flex;
-  width: 445px;
-  height: 30px;
-  margin: -2px;
-  padding: 5px;
-  left: 0px;
-  cursor: pointer;
-  z-index: 5;
-}
-.seq-mobil {
-  font-family: monospace;
-  top: 0px;
-  left: 455px;
-  position: absolute;
-  font-size: 1em;
-  display: inline-block;
-  height: 30px;
-}
-.seq-marge {
-  word-spacing: normal;
-}
-.V {
-  color: #000;
-  background-color: #efe;
-}
-.D {
-  color: #000;
-  background-color: #fee;
-}
-.J {
-  color: #000;
-  background-color: #ffffe2;
-}
-.N,
-.N + .J,
-.N + .D {
-  box-shadow: -1px 0 0 #657b83;
-}
-.highlight_border,
-.highlight_seq {
-  display: inline-flex;
-  height: 1em;
-  position: relative;
-}
-.highlight_border {
-  border-bottom: solid;
-  margin: -1px;
-  border-width: 4px;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: -moz-none;
-  -ms-user-select: none;
-  user-select: none;
-  pointer-events: none;
-  opacity: 0.3;
-  bottom: 1px;
-}
-.highlight_seq {
-  top: .9em;
-  padding-bottom: 1px;
-  opacity: 0.6;
-  font-size: 70%;
-  letter-spacing: .428em;
-  /* (1-.7) / .7 */
-  left: .214em;
-}
-.highlight {
-  display: inline-block;
-  width: 0px;
-  word-spacing: normal;
-}
-span .substitution,
-span .indel,
-span .insertion,
-span .deletion {
-  font-weight: bold;
-  color: #800;
-}
-span .substitution {
-  border-bottom: 1px solid #800;
-}
-span .silent {
-  border-bottom: 3px double #008;
-  color: #008;
-}
-span .end-codon {
-  box-shadow: 1px 0 0 #657b83;
-}
-.seq-fixed {
-  background: #ffffff;
-}
-.menu-segmenter {
-  position: relative;
-  float: left;
-  width: 475px 200;
-}
-#toIMGTSeg {
-  width: 12px;
-  display: inline-block;
-  text-align: center;
-}
-.menu-highlight {
-  position: relative;
-  float: left;
-  width: eval(300px);
-}
-.segmenter {
-  overflow-x: scroll !important;
-  overflow-y: auto;
-  min-height: 130px;
-  margin-top: 1px;
-  max-height: 500px;
-}
-#segmenter {
-  display: flex;
-  flex-flow: column;
-}
-#highlightCheckboxes {
-  height: 100%;
-  float: left;
-}
-.seq-fixed {
-  bottom: 1px;
-}
-.aligner-menu {
-  display: inline-block;
-  padding: 2px 10px;
-}
-.aligner-menu:hover {
-  cursor: pointer;
-  background-color: #dddddd;
-}
-.aligner-button {
-  cursor: pointer;
-  font-size: 13px;
-  min-width: 16px;
-  color: #657b83;
-}
-.aligner-menu:hover .menu-content {
-  display: block;
-}
-.menu-content {
-  display: none;
-  position: absolute;
-  bottom: 20px;
-  background-color: white;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  margin-left: -10px;
-}
-.menu-content a {
-  padding: 8px 12px;
-  text-decoration: none;
-  display: block;
-}
-.menu-content label {
-  padding: 8px 12px;
-  text-decoration: none;
-  display: block;
-  cursor: pointer;
-}
-.menu-content a:hover {
-  background-color: #dddddd;
-}
-.menu-content label:hover {
-  background-color: #dddddd;
-}
-.seq_layer {
-  position: absolute;
-  top: 0px;
-}
-.seq_layer_text {
-  position: absolute;
-  top: 5px;
-  z-index: 3;
-}
-.seq_layer_text2 {
-  position: absolute;
-  top: 20px;
-  -webkit-transform: scale(1, 0.5);
-  /* Safari and Chrome */
-  -moz-transform: scale(1, 0.5);
-  /* Firefox */
-  -ms-transform: scale(1, 0.5);
-  /* IE 9 */
-  -o-transform: scale(1, 0.5);
-  /* Opera */
-  transform: scale(1, 0.5);
-  /* W3C */
-}
-.seq_layer_highlight {
-  border-left: solid black 1px;
-  border-right: solid black 1px;
-  opacity: 0.15;
-  height: 15px;
-  top: 5px;
-  margin-left: -2px;
-  padding-right: 4px;
-}
-.seq_layer_bracket {
-  height: 2px;
-  top: 21px;
-  border: solid;
-  border-top: none;
-  border-width: 2px;
-  margin: -2px;
-  opacity: 0.6;
-  z-index: 1;
-  margin-left: -3px;
-  padding-right: 2px;
-}
-.seq_layer_bracket_top {
-  height: 2px;
-  top: 4px;
-  border: solid;
-  border-bottom: none;
-  border-width: 2px;
-  margin: -2px;
-  opacity: 0.6;
-  z-index: 1;
-  margin-left: -3px;
-  padding-right: 2px;
-}
-.seq_layer_underline {
-  border-left: solid black 1px;
-  border-right: solid black 1px;
-  height: 3px;
-  top: 18px;
-  opacity: 0.3;
-  z-index: 2;
-  margin-left: -2px;
-  padding-right: 4px;
-}
-.seq_layer_quality {
-  height: 5px;
-  top: 24px;
-  z-index: 2;
-}
-.seq_quality_block {
-  opacity: 1;
-  height: 5px;
-  float: left;
-}
-.seq_quality_block:hover {
-  opacity: 0.5;
-}
-.seq_layer_bracket:hover,
-.seq_layer_bracket_top:hover {
-  border-width: 4px;
-  opacity: 1;
-}
-.seq_layer_underline:hover {
-  height: 5px;
-  opacity: 1;
-}
-#aligner-open-button {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 12px;
-  background: white;
-  right: auto;
-  text-align: center;
-  line-height: 0px;
-  height: 16px;
-  padding-top: 4px;
-  padding-left: 100px;
-}
-#aligner-open-button:hover {
-  background: #fdf6e3;
-}
-#aligner-left {
-  position: relative;
-  width: 420px;
 }
 body {
   line-height: 20px;
