--- a/server/py4web/apps/vidjil/templates/layout.html
+++ b/server/py4web/apps/vidjil/templates/layout.html
@@ -26,7 +26,7 @@
           [[if globals().get('user'):]]
           <li><a href="[[=URL('patient')]]">Patients</a></li>
           <li><a href="[[=URL('run')]]">Runs</a></li>
-          <li><a href="[[=URL('set')]]">Sets</a></li>
+          <li><a href="[[=URL('sample_set')]]">Sets</a></li>
           [[else:]]
 
           [[pass]]
