--- a/server/py4web/apps/vidjil/templates/forms.html
+++ b/server/py4web/apps/vidjil/templates/forms.html
@@ -1,13 +1,8 @@
 [[extend 'layout.html']]
 
-[[for message in messages:]]
-<div class="notification is-danger">
-[[=message]]
-</div>
-[[pass]]
-
+<h2 class="subtitle">Form [[=title]]</h2>
 [[for form in forms:]]
-<h2 class="subtitle">Form [[=form.form_name]]</h2>
+<!--<h2 class="subtitle">Form [[=form.form_name]]</h2>-->
 <div class="box">
   [[=form]]
 </div>
