--- a/server/py4web/apps/vidjil/templates/html_grid.html
+++ b/server/py4web/apps/vidjil/templates/html_grid.html
@@ -1,6 +1,6 @@
 [[extend 'layout.html']]
 
-<h2 class="title">Pure HTML Grid</h2>
+<h2 class="title">[[=title]] </h2>
 <div class="container" style="padding-top: 1em;">
     [[if 'action' in request.url_args and request.url_args['action'] in ['details', 'edit']:]]
         [[form = grid.render()]]
