CSS; fix error of scatterplot menu hoverhable even if hidden Link to #4972

--- a/browser/css/dark.css
+++ b/browser/css/dark.css
@@ -1141,6 +1141,7 @@ span.warningReads {
   max-height: 0px;
   opacity: 0;
   font-size: 0%;
+  overflow: hidden;
 }
 .sp_menu:hover {
   transition-property: all;
