--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -1320,6 +1320,7 @@ span.warningReads {
     max-height: 0px; 
     opacity: 0;
     font-size: 0%;
+    overflow: hidden;
 }
 .sp_menu:hover{
   transition-property: all;
