--- a/browser/css/svg.css
+++ b/browser/css/svg.css
@@ -653,11 +653,13 @@ line {
 }
 /*menu*/
 .menu {
-  padding: 3px;
+  padding: 7px;
   float: left;
-  margin: 5px;
   cursor: pointer;
   background: inherit;
+}
+.menu:hover .selector {
+  display: block;
 }
 .menu a {
   text-decoration: none;
@@ -942,7 +944,7 @@ span.logo {
   min-width: 150px;
   margin-left: -6px;
   border-top: none;
-  margin-top: calc(7px);
+  margin-top: calc(8px);
   z-index: 5;
   overflow: hidden;
   border-width: 1px;
@@ -1140,6 +1142,7 @@ span.warningReads {
   max-height: 0px;
   opacity: 0;
   font-size: 0%;
+  overflow: hidden;
 }
 .sp_menu:hover {
   transition-property: all;
@@ -1226,9 +1229,13 @@ span.warningReads {
   margin-left: 14px;
 }
 .axis_select {
-  display: flex;
+  vertical-align: bottom;
+  display: inline;
   overflow: hidden;
   white-space: nowrap;
+}
+.axis_select_icon {
+  display: flex;
 }
 .axis_select select {
   background: #ffffff;
@@ -1858,7 +1865,6 @@ textarea#edit_value {
   min-height: 45px;
 }
 #top_info {
-  display: inline-flex;
   font-weight: bold;
   color: black;
 }
