less/css : cleanner menus

--- a/browser/css/dark.css
+++ b/browser/css/dark.css
@@ -659,6 +659,10 @@ line {
   cursor: pointer;
   background: inherit;
 }
+.menu:hover {
+  cursor: pointer;
+  background-color: #dddddd;
+}
 .menu:hover .selector {
   display: block;
 }
@@ -676,6 +680,7 @@ line {
   border-top: solid;
   border-width: 1px;
   border-color: #333333;
+  text-indent: 5px;
 }
 .submenu {
   width: 200px;
@@ -683,7 +688,7 @@ line {
 }
 .menu_box {
   margin: 0px;
-  padding: 5px;
+  padding: 5px 0px;
   border-top: solid;
   border-width: 1px;
   border-color: #333333;
@@ -751,7 +756,7 @@ line {
   background: #000000;
   cursor: pointer;
   font-size: 13px;
-  margin: 2px;
+  padding: 3px 8px;
   display: block;
   text-align: left;
 }
@@ -938,10 +943,8 @@ span.logo {
   display: none;
   position: fixed;
   margin-right: -5px;
-  padding: 3px;
   border: solid;
   background: inherit;
-  text-center: left;
   min-width: 150px;
   margin-left: -6px;
   border-top: none;
@@ -950,6 +953,7 @@ span.logo {
   overflow: hidden;
   border-width: 1px;
   background-color: #000000;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 #bot-placeholder {
   flex: 0 0 155px;
