--- a/browser/css/light.less
+++ b/browser/css/light.less
@@ -17,7 +17,7 @@
 @message_border_red : darkred;
 
 @background : #ffffff; 
-@border: #cccccc;
+@border: #ddd;
 
 @urgent_message : #D4A190;
 @info_message : #A1D490;
