--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -815,6 +815,11 @@ line {
   background:inherit;
 }
 
+.menu:hover{
+  cursor: pointer;
+  background-color: #ddd
+}
+
 .menu:hover .selector{
   display:block;
 }
@@ -836,6 +841,7 @@ line {
     border-top: solid;
     border-width: 1px;
     border-color:@border;
+    text-indent: 5px;
 }
 
 .submenu{
@@ -845,7 +851,7 @@ line {
 
 .menu_box {
     margin: 0px;
-    padding: 5px;
+    padding: 5px 0px;
     border-top: solid;
     border-width: 1px;
     border-color:@border;
@@ -919,7 +925,7 @@ line {
   background : @background;
   cursor:pointer;
   font-size: 13px;
-  margin :2px;
+  padding :3px 8px;
   display:block;
   text-align:left;
 }
@@ -1127,10 +1133,8 @@ span.logo
   display: none;
   position: fixed;
   margin-right: -5px;
-  padding: 3px;
   border: solid;
   background: inherit;
-  text-center: left;
   min-width: 150px;
   margin-left: -6px;
   border-top: none;
@@ -1138,7 +1142,8 @@ span.logo
   z-index:5;
   overflow: hidden;
   border-width: 1px;
-  background-color: @background
+  background-color: @background;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 #bot-placeholder {
