--- a/browser/css/svg.css
+++ b/browser/css/svg.css
@@ -658,6 +658,10 @@ line {
   cursor: pointer;
   background: inherit;
 }
+.menu:hover {
+  cursor: pointer;
+  background-color: #dddddd;
+}
 .menu:hover .selector {
   display: block;
 }
@@ -675,6 +679,7 @@ line {
   border-top: solid;
   border-width: 1px;
   border-color: #333333;
+  text-indent: 5px;
 }
 .submenu {
   width: 200px;
@@ -682,7 +687,7 @@ line {
 }
 .menu_box {
   margin: 0px;
-  padding: 5px;
+  padding: 5px 0px;
   border-top: solid;
   border-width: 1px;
   border-color: #333333;
@@ -750,7 +755,7 @@ line {
   background: #ffffff;
   cursor: pointer;
   font-size: 13px;
-  margin: 2px;
+  padding: 3px 8px;
   display: block;
   text-align: left;
 }
@@ -937,10 +942,8 @@ span.logo {
   display: none;
   position: fixed;
   margin-right: -5px;
-  padding: 3px;
   border: solid;
   background: inherit;
-  text-center: left;
   min-width: 150px;
   margin-left: -6px;
   border-top: none;
@@ -949,6 +952,7 @@ span.logo {
   overflow: hidden;
   border-width: 1px;
   background-color: #ffffff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 #bot-placeholder {
   flex: 0 0 155px;
