--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -768,6 +768,17 @@ line {
   background: @background;
 }
 
+#clone_axes_selector{
+  padding: 5px;
+  position: absolute;
+  left: @width_left_container;
+  top: 195px;
+  width:220px;
+  border:solid;
+  background: @background;
+  z-index:15;
+}
+
 .dataMenu{
   padding: 5px;
   position: absolute;
@@ -932,7 +943,7 @@ line {
 
 
 .popup_container{
-  z-index:20;
+  z-index:10;
   min-width:450px;
   max-width:80%;
   font-size: 13px; 
@@ -1017,7 +1028,7 @@ span.sample-tag, a.tag-link {
   margin-bottom: 10px;
 }
 
-#file_menu, #menu, #list_clones, #tagSelector, #display-menu, #bot-container{
+#file_menu, #menu, #list_clones, #tagSelector, #clone_axes_selector #display-menu, #bot-container{
  background : @background;
 }
 
@@ -1213,7 +1224,7 @@ span.logo
   color: grey;
 }
 
-.list_clones, .bot-bar, #bot-container, .tagSelector
+.list_clones, .bot-bar, #bot-container, .tagSelector, #clone_axes_selector
 {
   border-color: @border; 
 }
@@ -1530,7 +1541,7 @@ width: 0px;
 }
 
 .db_div{
-  z-index:5;
+  z-index:20;
   position: fixed; 
   top: 35px;
   width:100%;
