less/css: remove old static tagColor

--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -7,17 +7,6 @@
 @segmenterHeight : 155px;
 @segmenterWidth : 760px;
 
-/* default tag color */
-@tagColor0 : #DC322F;
-@tagColor1 : #cb4b16;
-@tagColor2 : #b58900;
-@tagColor3 : #268bd2;
-@tagColor4 : #6c71c4;
-@tagColor5 : #2aa198;
-@tagColor6 : #d33682;
-@tagColor7 : #859900;
-@tagColor9 : #bdbdbd;
-
 @runTokenColor : #ffdde0;
 @patientTokenColor : #eed0ff;
 @genericTokenColor : #dcedff;
@@ -2011,35 +2000,7 @@ max-height: 100%;
 flex-grow : 1;
 }
 
-.tagColor0{
-    background : @tagColor0;
-}
-.tagColor1{
-    background : @tagColor1;
-}
-.tagColor2{
-    background : @tagColor2;
-}
-.tagColor3{
-    background : @tagColor3;
-}
-.tagColor4{
-    background : @tagColor4;
-}
-.tagColor5{
-    background : @tagColor5;
-}
-.tagColor6{
-    background : @tagColor6;
-}
-.tagColor7{
-    background : @tagColor7;
-}
-.tagColor8{
-    background : @default;
-}
-.tagColor9{
-    background : @tagColor9;
+.tagColor_smaller_clones{
     margin-left: 7px;
 }
 .inactiveTag{
