--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -2643,6 +2643,7 @@ div.tooltip {
   border-width: 0px 1px;
   border-color: #cccccc;
   padding:1px;
+  margin-left: 15px;
 }
 
 .rs-flex-parent-h {
@@ -2652,7 +2653,14 @@ div.tooltip {
   align-content: stretch;
   justify-content: center;
   padding:1px;
+  margin-left: 15px;
 }
+
+.rs-flex{
+  padding:1px;
+  margin-left: 15px;
+}
+
 .rs-sample {
   flex: 1 1 0px;
   white-space: nowrap;
@@ -2678,7 +2686,8 @@ div.tooltip {
           user-select: none;
   cursor: pointer;
   padding: 1px 1px 0px 1px;
-  width: 65px;
+  width: 70px;
+  max-width: 100px;
 }
 
 .rs-selected {
@@ -2704,3 +2713,19 @@ div.tooltip {
   background: lightgray;
 }
 
+.rs-header {
+  font-weight: bold;
+  margin: 3px 0px;
+  border-top: solid;
+  border-width: 1px;
+  border-color: #aaa;
+  padding: 4px 0px 0px 0px;
+}
+
+#report-menu{
+  width: 650px;
+}
+
+#rs-new-block-select{
+  max-width:200px;
+}
