--- a/browser/css/segmenter_page.css
+++ b/browser/css/segmenter_page.css
@@ -1377,8 +1377,14 @@ span.logo {
   text-align: center;
   vertical-align: middle;
 }
+#info_warnings,
+#info_warnings td {
+  width: 100%;
+}
 #info_timepoint,
 #info_timepoint td,
+#info_warnings,
+#info_warnings td,
 .info_overlaps td {
   min-width: 150px;
   max-width: 100%;
@@ -1391,6 +1397,7 @@ span.logo {
 }
 #info_window table,
 #info_timepoint table,
+#info_warnings table,
 .info_overlaps {
   border-style: solid;
   border-color: #dddddd;
@@ -1398,6 +1405,7 @@ span.logo {
 }
 #info_window table .header,
 #info_timepoint table .header,
+#info_warnings table .header,
 .info_overlaps table .header {
   border-width: 2px;
   background-color: #dddddd;
