--- a/browser/css/svg.css
+++ b/browser/css/svg.css
@@ -1046,8 +1046,14 @@ span.logo {
   text-align: center;
   vertical-align: middle;
 }
+#info_warnings,
+#info_warnings td {
+  width: 100%;
+}
 #info_timepoint,
 #info_timepoint td,
+#info_warnings,
+#info_warnings td,
 .info_overlaps td {
   min-width: 150px;
   max-width: 100%;
@@ -1060,6 +1066,7 @@ span.logo {
 }
 #info_window table,
 #info_timepoint table,
+#info_warnings table,
 .info_overlaps {
   border-style: solid;
   border-color: #333333;
@@ -1067,6 +1074,7 @@ span.logo {
 }
 #info_window table .header,
 #info_timepoint table .header,
+#info_warnings table .header,
 .info_overlaps table .header {
   border-width: 2px;
   background-color: #333333;
